syntax = "proto3";

package db_service;

option go_package = "app/internal/gen/db_v1;db_v1";

service DatabaseService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message UserResponse {
  int64 id = 1;
  string name = 2;
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string name = 2;
  optional string password = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {}